--- a/image-updater/applications/always-latest.yml
+++ b/image-updater/applications/always-latest.yml
@@ -10,7 +10,7 @@ spec:
   project: default
 
   source:
-    repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
+    repoURL: https://github.com/hesham131595/gitops.git
     targetRevision: HEAD
     path: ./image-updater/example-app/envs/qa/
    
