--- a/sync-hooks-waves/06-waves-and-hooks/db-upgrade.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/db-upgrade.yml
@@ -5,7 +5,9 @@ metadata:
   generateName: my-db-upgrade-
   labels:
     codefresh.io/cert: db-job  
-  PreSync, wave 10
+  annotations:
+     argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/sync-wave: "10"
 spec:
   template:
     spec:
